<resources>
    <string name="app_name">Tradoid</string>

    // Classes
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="stock_market">Stock Market</string>
    <string name="status_page">Status Page</string>
    <string name="profile">Profile</string>

    // Login
    <string name="icon_desc">App Icon</string>

    // Sign In/Up TextEdits
    <string name="edits_password">Password</string>
    <string name="edits_name">Name</string>
    <string name="edits_email">Email</string>
    <string name="edits_confirm_pass">Confirm Password</string>

    // Sign In Class
    <string name="forgot_pass">Forgot your password?</string>
    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="sign_in_card_Title">Welcome Back</string>

    // Sign Up Class
    <string name="have_an_account">Already have an Account?</string>
    <string name="sign_up_card_Title">Register</string>

    // Email Validation Class
    <string name="email_validation_msg">Please enter the verification code send to </string>
    <string name="email_val_btn_text">Continue</string>
    <string name="card_title_email_val">Validation</string>
    <string name="resend">resend</string>

    // Reset Password Class
    <string name="reset_password_card_title">New Password</string>
    <string name="btn_reset_password">Update</string>

    // Ban msg Class
    <string name="user_blocked_msg">We are sorry to tell you that you have been banned for: </string>
    <string name="user_blocked">USER BLOCKED</string>
    <string name="attention_sign_desc">Attention Sign for Banned user</string>

    // Stock Market
    <string name="stock_market_tv_desc">Instead of the Status Bar</string>

    // Status Page
    <string name="portfolio">Portfolio</string>

    // Profile Class
    <string name="profile_user_name">User Name</string>
    <string name="profile_email">email@email.com</string>
    <string name="profile_pic_desc">profile picture</string>

    // History section Class
    <string name="history_card_Title">History</string>

    // Balance section Class
    <string name="balance_card_Title">Your Balance</string>
    <string name="edits_usd">USD</string>
    <string name="request_btn_name">Send Request</string>
    <string name="balance_error_msg">Action or USD Amount missing</string>
    <string name="balance_action_hint">Action</string>

    // Notification section Class
    <string name="notification_card_Title">Notifications</string>

    // List item names
    // Stock Row
    <string name="stock_name">Name</string>
    <string name="stock_full_name">Full Name</string>
    <string name="stock_price">Stock Price</string>
    <string name="stock_price_change">Price Change</string>
    // Status Row
    <string name="status_name">Name</string>
    <string name="status_full_name">Full Name</string>
    <string name="status_usd">$USD</string>
    <string name="status_stocks">Stocks: </string>
    <string name="status_dot_desc">Shows the color</string>
    // User Row
    <string name="user_name">Username</string>
    <string name="user_email">Email</string>
    <string name="user_balance">Balance</string>
    // Profile Row
    <string name="profile_section">Section Name</string>
    <string name="profile_section_icon_desc">Section Icon</string>
    <string name="profile_arrow_desc">Forward Arrow to other Screens</string>
    // history Row
    <string name="history_name">Stock Name</string>
    <string name="history_date">Date</string>
    <string name="history_action">Bought/Sold</string>


    // Menu Item names
    <string name="user_list">User List</string>
    <string name="dashboard">Dashboard</string>
    <string name="options">Options</string>
    <string name="search">Search</string>

</resources>