<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/status_row_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="?attr/cardBackgroundColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/status_row_tv_stocks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/status_stocks"
                android:textSize="@dimen/row_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/status_row_color_dot" />

            <TextView
                android:id="@+id/status_row_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/row_horizontal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/status_name"
                android:textSize="@dimen/row_text_size"
                app:layout_constraintBottom_toTopOf="@+id/status_row_tv_full_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/status_row_tv_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/status_full_name"
                android:textSize="@dimen/row_text_size"
                android:textColor="@color/icon_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/status_row_tv_name" />

            <TextView
                android:id="@+id/status_row_tv_usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/status_usd"
                android:textSize="@dimen/row_text_size"
                app:layout_constraintBottom_toTopOf="@+id/status_row_tv_stocks"
                app:layout_constraintStart_toStartOf="@+id/status_row_tv_stocks"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/status_row_color_dot"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="110dp"
                app:layout_constraintBottom_toBottomOf="@+id/status_row_tv_stocks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/status_row_tv_usd"
                app:srcCompat="@drawable/ic_circle"
                android:contentDescription="@string/status_dot_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>