<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stock_row_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="?attr/cardBackgroundColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/stock_row_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/row_vertical_margin"
                android:layout_marginBottom="5dp"
                android:text="@string/stock_name"
                android:textSize="@dimen/row_text_size"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/stock_row_tv_full_name"
                app:layout_constraintStart_toStartOf="@+id/stock_row_tv_full_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stock_row_tv_stockPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/row_vertical_margin"
                android:layout_marginBottom="5dp"
                android:text="@string/stock_price"
                android:textSize="@dimen/row_text_size"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/stock_row_tv_price_change"
                app:layout_constraintEnd_toEndOf="@+id/stock_row_tv_price_change"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stock_row_tv_price_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/row_horizontal_margin"
                android:layout_marginBottom="@dimen/row_vertical_margin"
                android:text="@string/stock_price_change"
                android:textSize="@dimen/row_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/stock_row_tv_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/row_horizontal_margin"
                android:layout_marginBottom="@dimen/row_vertical_margin"
                android:text="@string/stock_full_name"
                android:textSize="@dimen/row_text_size"
                android:textColor="@color/icon_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>