<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/history_row_layout">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="?attr/cardBackgroundColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/history_row_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/row_horizontal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/row_text_size"
                android:text="@string/history_name"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/history_row_date"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/history_row_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_date"
                android:textSize="@dimen/row_text_size"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/history_row_name"
                app:layout_constraintEnd_toStartOf="@+id/history_row_state"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/history_row_name" />

            <TextView
                android:id="@+id/history_row_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/row_horizontal_margin"
                android:text="@string/history_action"
                android:textSize="@dimen/row_text_size"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/history_row_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/history_row_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>