<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/card_top_margin_behind"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/card_top_margin"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_title_margin"
                android:text="@string/reset_password_card_title"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/card_title_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_password_res_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/card_title_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_res_pass_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edits_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_confirm_res_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout_password_res_password"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout_password_res_password"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_password_res_password"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/box_corner_radius">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_res_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edits_confirm_pass"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_error_msg_res_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textColor="@color/red"
                app:layout_constraintBottom_toTopOf="@+id/btn_res_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_res_password"
                style="@style/Custom_Button"
                android:layout_width="0dp"
                android:layout_height="@dimen/Box_height"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="@dimen/lower_margin_from_screen_end"
                android:background="@drawable/round_button"
                android:text="@string/btn_reset_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/res_pas_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/back_arrow_x"
        android:layout_marginTop="@dimen/back_arrow_y"
        android:text="@string/sign_in"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/back_arrow_text_size"
        app:drawableLeftCompat="@drawable/ic_arrow_back_ios"
        app:drawableTint="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>